# embedded-life

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build-devimage.bat  build-devimage.sh  destroy-devcontainer.bat  destroy-devcontainer.sh  enter-devcontainer.bat  enter-devcontainer.sh  launch-devcontainer.bat  launch-devcontainer.sh
c/: .gitignore  Makefile
c/life/: Makefile  board.c  board.h  game.c  game.h  rules.c  rules.h
c/test/: .gitignore  Makefile  life-test  mock_led_matrix.c  mock_led_matrix.h  suites.h  test_board.c  test_game.c  test_main.c  test_rules.c
cpp/life/: board.cpp  board.h  game.cpp  game.h  rules.cpp  rules.h
cpp/mock/: CMakeLists.txt  mock-led-matrix.cpp
cpp/test/: .gitignore  CMakeLists.txt  test_board.cpp
docs/: LICENSE.md  _config.yml  about.md  class-itinerary.md  how-we-mock.md  index.html  index.md  working-in-lifedev.md  workstation-setup.md
docs/_includes/: sidebar.html
docs/_posts/: 2018-09-16-code-craftsman-saturday.md  2018-10-13-code-craftsman-saturday.md  2018-10-14-lessons-learned-session-one.md
golang/: board.go  board_test.go  rules.go  rules_test.go
life/: .gitignore  Makefile  board.cpp  board.h  game.h  life.c  life.h  rules.cpp  rules.h
mock/: Makefile  mock-led-matrix.cpp  mock-led-matrix.h
test/: CMakeLists.txt  Makefile  test_board.cpp  test_game.cpp  test_rules.cpp  test_suite.c
